<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true" >

    <!-- The Header -->
    <include
        android:id="@+id/header_bar"
        layout="@layout/header_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Title for profile page-->
<!--    <TextView-->
<!--        android:id="@+id/user_profile_title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Profile"-->
<!--        android:textColor="@color/lightText"-->
<!--        android:textSize="@dimen/font_super_heading_size"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/user_profile_name_edit"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.309" />-->

    <!-- Profile icon -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_name_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_bar"
        app:cardCornerRadius="80dp"
        app:cardElevation="0dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/user_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile" />

    </com.google.android.material.card.MaterialCardView>

    <!-- User text editable sections: name, email, phone -->
    <EditText
        android:id="@+id/user_profile_email_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/accent_first"
        android:ems="10"
        android:enabled="false"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_phone_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_profile_email_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/lightText"
        android:textSize="@dimen/font_subheading_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_email_edit"
        app:layout_constraintEnd_toEndOf="@+id/user_profile_email_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_profile_email_edit"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_name_edit"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/user_profile_phone_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/accent_first"
        android:ems="10"
        android:enabled="false"
        android:hint="Enter your phone number"
        android:inputType="phone"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_edit_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_profile_phone_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone"
        android:textColor="@color/lightText"
        android:textSize="@dimen/font_subheading_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_phone_edit"
        app:layout_constraintEnd_toEndOf="@+id/user_profile_phone_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_profile_phone_edit"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_email_edit"
        app:layout_constraintVertical_bias="0.875" />


    <EditText
        android:id="@+id/user_profile_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/accent_first"
        android:ems="10"
        android:enabled="false"
        android:hint="Enter your name"
        android:inputType="text"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_email_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/user_profile_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Name"
        android:textColor="@color/lightText"
        android:textSize="@dimen/font_subheading_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_name_edit"
        app:layout_constraintEnd_toEndOf="@+id/user_profile_name_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_profile_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/header_bar"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Settings button + icon -->
    <ImageButton
        android:id="@+id/user_profile_settings_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="@color/accent_first"
        android:contentDescription="Settings"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049"
        app:srcCompat="@drawable/android_settings" />

    <!-- Edit profile button -->
    <Button
        android:id="@+id/user_profile_edit_confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="Edit Profile"
        android:textColor="@color/primary"
        android:textColorLink="@color/accent_first"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.79" />

    <Button
        android:id="@+id/user_profile_my_notifications_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_first"
        android:text="My Notifications"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/user_profile_edit_confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Hidden delete button -->
    <Button
        android:id="@+id/user_profile_admin_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/attention"
        android:text="Delete Profile"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.877" />

    <!-- Included nav bar -->
    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>