<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Create account heading -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="Create Account"
        android:textColor="@color/lightText"
        android:textSize="@dimen/font_super_heading_size"
        android:textStyle="bold" />

    <!-- Profile icon -->
    <FrameLayout
        android:id="@+id/user_register_profile_container"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:background="@drawable/dashed_upload_box"
        android:clickable="true"
        android:focusable="true"
        android:outlineProvider="background"
        android:clipToOutline="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@android:drawable/ic_menu_upload"
                app:tint="@color/lightText" />

            <TextView
                android:layout_marginTop="8dp"
                android:text="Tap to upload profile picture"
                android:textColor="@color/lightTextSemi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_text_size"
                android:gravity="center"
                android:textAlignment="center" />
        </LinearLayout>

        <!-- Actual uploaded image -->
        <ImageView
            android:id="@+id/user_register_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

    </FrameLayout>

    <!-- Name field -->
    <EditText
        android:id="@+id/user_register_name_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/accent_first"
        android:gravity="center"
        android:hint="Enter your name"
        android:inputType="textPersonName"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi" />

    <!-- Email field -->
    <EditText
        android:id="@+id/user_register_email_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/accent_first"
        android:gravity="center"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi" />

    <!-- Phone field -->
    <EditText
        android:id="@+id/user_register_phone_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/accent_first"
        android:gravity="center"
        android:hint="Enter your phone"
        android:inputType="phone"
        android:textColor="@color/lightText"
        android:textColorHint="@color/lightTextSemi" />

    <Button
        android:id="@+id/user_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent_first"
        android:text="Register"
        android:textColor="@color/primary"
        android:textSize="@dimen/font_subheading_size" />

</LinearLayout>